@@ -1248,18 +1248,18 @@ sub preflight_checks {
 
 	# Check 1.1
 	# This script only works in the en_US locale
-	if (! $NOINFO ) { show_info_box(); print "Checking locale; must be in en_US or en_GB to avoid runtime errors.\n" }
+	if (! $NOINFO ) { show_info_box(); print "Checking locale; must be in en_US, en_AU, or en_GB to avoid runtime errors.\n" }
 	my $current_locale = POSIX::setlocale(LC_ALL);
 	my @locale = split (/;/, $current_locale);
 	foreach my $line (@locale) {
-		if ($line =~ /en_US/ or $line =~ /en_GB/) {
+		if ($line =~ /en_US|en_GB|en_AU/) {
 			if ( ! $NOOK ) { show_ok_box(); print $line . "\n" }
 		} else {
 			# make an exception for NUMERIC or MESSAGES, as these can sometimes be set to "C"
 			if ($line =~ /NUMERIC=C/ or $line =~ /MESSAGES=C/ ) {
 				if ( ! $NOOK ) { show_ok_box(); print $line . "\n" }
 			} else {
-				show_crit_box(); print "${RED}$line non-compatible locale detected, must be en_GB or en_US!${ENDC}\n";
+				show_crit_box(); print "${RED}$line non-compatible locale detected, must be en_US, en_AU or en_GB!${ENDC}\n";
 				exit;
 			}
 		}
